--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation 'nl.joery.animatedbottombar:library:1.1.0'
     implementation platform('com.google.firebase:firebase-bom:30.2.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
@@ -51,6 +52,7 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'androidx.test:core-ktx:1.4.0'
+    implementation 'androidx.core:core-animation:1.0.0-beta01'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.firebase:firebase-analytics-ktx'
